# nickel_cors

./: .bumpversion.cfg  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md
src/: defaults.rs  lib.rs
