[package]
name = "nickel_cors"
version = "0.2.3"
authors = ["Hui Tang <duriantang@gmail.com>"]
description = "CORS Middleware for nickel.rs"
keywords = ["nickel", "middleware", "web"]
categories = ["web-programming", "web-programming::http-server"]
license = "MIT"
repository = "https://github.com/duriantang/nickel_cors"
readme = "README.md"

[dependencies]
nickel = "0.10.2"

[dev-dependencies]
reqwest = "0.9.5"

[badges]

travis-ci = {repository = "duriantang/nickel_cors", branch = "master" }
codecov = { repository = "duriantang/nickel_cors", branch = "master", service = "github" }
