[package]
name = "nickel_cors"
version = "0.3.3"
authors = ["Hui Tang <duriantang@gmail.com>"]
description = "CORS Middleware for nickel.rs"
keywords = ["nickel", "middleware", "web"]
categories = ["web-programming", "web-programming::http-server"]
license = "MIT"
repository = "https://github.com/duriantang/nickel_cors"
readme = "README.md"
edition = "2018"

[dependencies]
nickel = "0.11.0"

[dev-dependencies]
reqwest = "0.9.15"

[badges]

travis-ci = {repository = "duriantang/nickel_cors", branch = "master" }
codecov = { repository = "duriantang/nickel_cors", branch = "master", service = "github" }
